[tool.poetry]
name = "url-shortener-fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "url_shortener_fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.5.1"
black = "^23.9.1"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
